<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>[3.5.0,3.5.5)</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <java.version>25</java.version>
        <sping.boot.version>[3.5.0,3.5.5)</sping.boot.version>
        <lombok.verion>[1.,)</lombok.verion>
        <map-struct.version>[1.,)</map-struct.version>
        <version.infinispan>15.2.6.Final</version.infinispan>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.application.version>0.10.0-SNAPSHOT</project.application.version>
        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
        <!-- documentation -->
        <de.elnarion.maven.version>3.0.1</de.elnarion.maven.version>
        <asciidoctor-maven-plugin.version>3.2.0</asciidoctor-maven-plugin.version>
    </properties>

    <modelVersion>4.0.0</modelVersion>

    <groupId>oleg.sopilnyak.test</groupId>
    <artifactId>parent-project</artifactId>
    <version>0.10.0-SNAPSHOT</version>
    <name>BasicSchoolBackend</name>
    <description>Basic School automation backend</description>

    <packaging>pom</packaging>

    <modules>
        <module>micro-core</module>
        <module>authentication</module>
        <module>bootstrap</module>
        <module>ingress</module>
        <module>business-logic</module>
        <module>persistence</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.verion}</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>oleg.sopilnyak.test</groupId>
                <artifactId>micro-core</artifactId>
                <version>${project.application.version}</version>
            </dependency>
            <dependency>
                <groupId>oleg.sopilnyak.test</groupId>
                <artifactId>authentication</artifactId>
                <version>${project.application.version}</version>
            </dependency>
            <dependency>
                <groupId>oleg.sopilnyak.test</groupId>
                <artifactId>ingress</artifactId>
                <version>${project.application.version}</version>
            </dependency>
            <dependency>
                <groupId>oleg.sopilnyak.test</groupId>
                <artifactId>business-logic</artifactId>
                <version>${project.application.version}</version>
            </dependency>
            <dependency>
                <groupId>oleg.sopilnyak.test</groupId>
                <artifactId>bootstrap</artifactId>
                <version>${project.application.version}</version>
            </dependency>
            <dependency>
                <groupId>oleg.sopilnyak.test</groupId>
                <artifactId>persistence</artifactId>
                <version>${project.application.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${sping.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.verion}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${map-struct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-bom</artifactId>
                <version>${version.infinispan}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>